updated git ignore to stop tracking .suo files

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 ecopax_shipping_updater/.vs/ecopax_shipping_updater/v17/.suo
 
 ~$Shipping Excel Sheet.xlsx
+
+Code Files/.vs/ecopax_shipping_updater/v17/.suo
