Updated CMA to use program based speech to text and optimized

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ ecopax_shipping_updater/.vs/ecopax_shipping_updater/v17/.suo
 Code Files/.vs/ecopax_shipping_updater/v17/.suo
 
 *.pyc
+
+Test Files/
